[package]
name = "c2rust-config"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "c2rust-config"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
